# tauri-vue-starter

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
locales/: en.yml  zh-CN.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  main.rs
src/components/: TauriCommand.vue
src/components/shared/: Header.vue
src/pages/: Index.vue
